Fixed BookingController tests and created BookingController