@@ -4,10 +4,13 @@ import com.acmeair.api.dto.flight.FlightResponseDto;
 import com.acmeair.api.mapper.FlightMapper;
 import com.acmeair.api.model.Flight;
 import com.acmeair.api.service.FlightService;
+
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 
 @RestController
@@ -21,18 +24,20 @@ public class FlightController {
         this.mapper = mapper;
     }
 
-    @GetMapping()
-    public List<FlightResponseDto> getAllFlights() {
+    @GetMapping
+    public ResponseEntity<List<FlightResponseDto>> getAllFlights() {
         List<Flight> flights = service.getAllFlights();
-        return flights.stream()
-            .map(mapper::toDto)
-            .toList();
+        List<FlightResponseDto> result = flights.stream()
+                .map(mapper::toDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(result);
     }
 
     @GetMapping("/{id}")
-    public FlightResponseDto getFlightById(@PathVariable("id") UUID id) {
+    public ResponseEntity<FlightResponseDto> getFlightById(@PathVariable("id") UUID id) {
         Flight flight = service.getFlightById(id);
-        return mapper.toDto(flight);
+        FlightResponseDto result = mapper.toDto(flight);
+        return ResponseEntity.ok(result);
     }
     
 }
